--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
   <!-- link your css file here -->
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon-32x32.png">
+
 </head>
 
 <body>
